--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=1818
-spring.datasource.url = jdbc:mysql://39.106.162.237:3306/superman?setUnicode=true&characterEncoding=utf8&useSSL=true
+spring.datasource.url=jdbc:mysql://39.106.162.237:3306/superman?setUnicode=true&characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=root666
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -8,3 +8,6 @@ mybatis.config-locations=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-aliases-package=com.xiaomi.nrb.superman.domain
 mapper.identity=mysql
+#小程序配置
+wechat.secretKey=23fb54793c2d18133f8173267c10d775
+wechat.appId=wx2627e0455c40a3dc
