--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-aliases-package=com.xiaomi.nrb.superman.domain
 mapper.identity=mysql
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-logging.level.com.xiaomi.nrb.superman.dao=debug
+#logging.level.com.xiaomi.nrb.superman.dao=debug
 #小程序配置
 wechat.secretKey=23fb54793c2d18133f8173267c10d775
 wechat.appId=wx2627e0455c40a3dc
