--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #小程序配置
 wechat.secretKey=23fb54793c2d18133f8173267c10d775
 wechat.appId=wx2627e0455c40a3dc
+
+server.ssl.key-store=classpath:2655524_www.youshow.xyz.pfx
+server.ssl.key-store-password=gBn339Sx
+server.ssl.keyStoreType=PKCS12
